[gd_scene load_steps=12 format=2]

[ext_resource path="res://Ship.gd" type="Script" id=1]
[ext_resource path="res://sprites/ship/ship1.png" type="Texture" id=2]
[ext_resource path="res://sprites/ship/ship2.png" type="Texture" id=3]
[ext_resource path="res://sprites/ship/ship3.png" type="Texture" id=4]
[ext_resource path="res://sprites/ship/ship4.png" type="Texture" id=5]
[ext_resource path="res://sprites/ship/ship5.png" type="Texture" id=6]
[ext_resource path="res://sprites/ship/ship6.png" type="Texture" id=7]
[ext_resource path="res://sprites/ship/ship7.png" type="Texture" id=8]
[ext_resource path="res://sprites/ship/ship8.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.91882, 4.30786 )

[node name="Ship" type="Node2D"]
position = Vector2( 62, 94.6667 )
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
pause_mode = 2
frames = SubResource( 1 )
frame = 6
playing = true
centered = false

[node name="Ship_body" type="Area2D" parent="Sprite"]
editor/display_folded = true
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Ship_body"]
position = Vector2( 19.2678, 5.59386 )
shape = SubResource( 2 )

[node name="Bullet_spawn" type="Node2D" parent="Sprite"]
position = Vector2( 29.6443, 5.46909 )
[connection signal="body_shape_entered" from="Sprite/Ship_body" to="." method="_on_Area2D_body_shape_entered"]
